# backtesterlib

./: README.md  backtester.py  data_handler.py  example.py  metrics.py  portfolio.py  pyproject.toml
backtesterlib/: __init__.py  backtester.py  data_handler.py  metrics.py  portfolio.py  visualiser.py
